# LightvLLM

./: .gitignore  .gitmodules  CLAUDE.md  README.md  main.py  pyproject.toml  setup.py
.claude/skills/benchmark/: SKILL.md
.claude/skills/history/: SKILL.md
.claude/skills/new-kernel/: SKILL.md
csrc/: activation_kernels.cu  activation_kernels.cuh  cub_compat.h  cuda_compat.h  dispatch_utils.h  layernorm_kernels.cu  layernorm_kernels.cuh  pos_encoding_kernels.cu  pos_encoding_kernels.cuh  torch_bindings.cpp
docs/: LEARNING_ROADMAP.md  PHASE1_PLAN.md  RAY_TO_K8S_MIGRATION.md  VLLM_ARCHITECTURE.md
docs/phase1/: PLAN.md  QNA.md
docs/phase1/history/: 2026-02-11_rmsnorm.md  2026-02-12_activation.md  2026-02-24_linear_mlp.md  2026-03-06_attention_backends.md  2026-03-06_llama_model.md  OVERVIEW.md
docs/phase2/: ARCHITECTURE_COMPARISON.md
lightvllm/: __init__.py
lightvllm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lightvllm/attention/: __init__.py  kv_cache.py  layer.py
lightvllm/attention/backends/: __init__.py  base.py  naive.py  sdpa.py
lightvllm/kernels/: __init__.py  activation.py  layernorm.py  pos_encoding.py
lightvllm/layers/: __init__.py  activation.py  linear.py  mlp.py  normalization.py  rotary_embedding.py
lightvllm/models/: __init__.py  base.py  llama.py  loader.py
lightvllm/utils/: __init__.py  logging.py
tests/: __init__.py  test_activation_kernel.cu  test_layernorm_kernel.cu  test_rope_kernel.cu
tests/attention/: test_attention.py
tests/kernels/: __init__.py  test_activation.py  test_layernorm.py  test_rope.py
tests/layers/: test_linear.py
tests/models/: __init__.py  test_llama.py  test_loader.py
