# =============================================================================
# [project] - 패키지 메타데이터
# pip install, uv pip install 시 사용되는 기본 정보
# PEP 621 표준: https://peps.python.org/pep-0621/
# =============================================================================
[project]

# 패키지 이름 (pip install lightvllm, import lightvllm)
name = "lightvllm"

# 버전 번호 (Semantic Versioning 권장: MAJOR.MINOR.PATCH)
version = "0.1.0"

# 패키지 설명 (pip show lightvllm 시 표시)
description = "A lightweight LLM serving engine for learning purposes"

# README 파일 경로 (PyPI 업로드 시 패키지 설명으로 사용)
readme = "README.md"

# 지원하는 Python 버전
requires-python = ">=3.10"

# 필수 의존성 (pip install lightvllm 시 자동 설치)
# 현재는 외부 의존성 없음 (torch 등은 나중에 추가 예정)
dependencies = []


# =============================================================================
# [project.optional-dependencies] - 선택적 의존성
# pip install lightvllm[dev] 형태로 설치
# =============================================================================
[project.optional-dependencies]

# 개발용 의존성 (테스트, 린팅 등)
# 설치: pip install -e ".[dev]" 또는 uv pip install -e ".[dev]"
dev = [
    "pytest>=7.0.0",  # 테스트 프레임워크
]


# =============================================================================
# [build-system] - 패키지 빌드 시스템
# pip install . 실행 시 패키지를 빌드하는 방법 지정
# PEP 517/518 표준
# =============================================================================
[build-system]

# 빌드에 필요한 패키지들 (빌드 전에 임시로 설치됨)
# - setuptools: Python 패키지 빌드 도구 (가장 전통적)
# - wheel: .whl 바이너리 배포 형식 지원
requires = ["setuptools>=61.0", "wheel"]

# 빌드 백엔드 (setuptools의 PEP 517 호환 인터페이스)
build-backend = "setuptools.build_meta"


# =============================================================================
# [tool.setuptools.packages.find] - setuptools 패키지 탐색 설정
# 어떤 폴더를 Python 패키지로 인식할지 지정
# =============================================================================
[tool.setuptools.packages.find]

# 패키지를 찾을 기준 디렉토리 ("."은 프로젝트 루트)
where = ["."]

# 포함할 패키지 패턴 (lightvllm, lightvllm.kernels, lightvllm.layers 등)
include = ["lightvllm*"]


# =============================================================================
# [tool.pytest.ini_options] - pytest 설정
# pytest.ini 대신 pyproject.toml에서 설정 가능
# =============================================================================
[tool.pytest.ini_options]

# 테스트 파일을 찾을 디렉토리
testpaths = ["tests"]

# 테스트 파일 패턴 (test_*.py 파일만 인식)
python_files = ["test_*.py"]

# 테스트 클래스 패턴 (Test로 시작하는 클래스)
python_classes = ["Test*"]

# 테스트 함수 패턴 (test_로 시작하는 함수)
python_functions = ["test_*"]
